<resources>
    <string name="app_name">SelFood</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register_text_imperative">Belum punya akun? Register!</string>
    <string name="login_resto">LOGIN RESTO</string>
    <string name="login_pengguna">LOGIN PELANGGAN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_option_dialog">Kamu ingin mendaftar sebagai siapa?</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="restoran">Restoran</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="registrasi">REGISTRASI</string>
    <string name="registrasi_pelanggan">Registrasi Pelanggan</string>
    <string name="nama_restoran">Nama Restoran</string>
    <string name="registrasi_restoran">Registrasi Restoran</string>
    <string name="jenis_restoran">Jenis Restoran</string>
    <string name="alamat_restoran">Alamat Restoran</string>
    <string name="title_activity_resto_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="beranda">Beranda</string>
    <string name="table_number_placeholder">0</string>
    <string name="nomor_meja">Nomor Meja</string>
    <string name="deskripsi_makanan">Deskripsi Makanan</string>
    <string name="harga_makanan">Harga Makanan</string>
    <string name="restoran_anda_belum_memiliki_menu">Restoran anda belum memiliki menu.</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="submit">Submit</string>
    <string name="title_activity_user">MainActivity</string>
    <string name="pesanan">Pesanan</string>
    <string name="pesan">Pesan</string>
    <string name="logout">Logout</string>
    <string name="cari_restoran">Cari Restoran</string>
    <string name="cari">CARI</string>
    <string name="daftar_restoran">Daftar Restoran</string>
    <string name="contact">Contact</string>
    <string name="status">Status</string>
    <string name="_0">0</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="restoran_tidak_ditemukan">Restoran tidak ditemukan.</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="jumlah_makanan">Jumlah Makanan</string>
    <string name="x1">x1</string>
    <string name="status_pemesanan">Status Pemesanan</string>
    <string name="belum_ada_pesanan">Belum ada pesanan.</string>
    <string name="total_harga">Total Harga</string>
</resources>