<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ui.RestoHomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/resto_table_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:text="@string/nama_lengkap"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_below="@+id/resto_table_detail_name"
            android:layout_above="@+id/total_price_table_detail"
            android:paddingTop="24dp"
            android:paddingBottom="10dp"
            android:id="@+id/rv_table_detail"
            android:visibility="visible"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/total_price_table_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_harga"
            android:layout_above="@+id/table_status_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/table_status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/resto_change_status_button"
            android:text="@string/status_pemesanan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/resto_change_status_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_red"
            android:text="Tombol Status"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"/>

    </RelativeLayout>
</FrameLayout>