<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddMenuActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/wave_login_menu" />

    <TextView
        android:id="@+id/tambah_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tambah Menu"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:fontFamily="@font/opensans_extrabold"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/food_name_input"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_box"
        android:hint="@string/nama_makanan"
        android:inputType="text"
        android:drawableStart="@drawable/custom_food_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        android:paddingEnd="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tambah_menu_text"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/food_description_input"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:scrollbars="vertical"
        android:background="@drawable/edittext_custom_box"
        android:hint="@string/deskripsi_makanan"
        android:inputType="textMultiLine"
        android:drawableStart="@drawable/custom_description_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        android:paddingEnd="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/food_name_input"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/food_price_input"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_box"
        android:hint="@string/harga_makanan"
        android:inputType="number"
        android:drawableStart="@drawable/custom_price_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        android:paddingEnd="12dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/food_description_input"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/food_pic_input_container"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/food_price_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="0dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/food_pic_input"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/food_price_input"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="onClick"
            />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_menu_submit_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:background="@drawable/button_red"
        android:textColor="@android:color/white"
        android:layout_below="@+id/food_pic_input_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/wave_login_menu"
        android:rotation="180"/>

    <ProgressBar
        android:id="@+id/add_menu_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>