<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="12dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/food_pic_container_menu_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/food_pic_menu_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_food"/>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/food_name_menu_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/food_pic_container_menu_detail"
            android:text="Nama Makanan"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/food_description_menu_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/food_name_menu_detail"
            android:layout_toEndOf="@+id/food_pic_container_menu_detail"
            android:text="@string/deskripsi_makanan"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginRight="10dp"
            android:textSize="10sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/food_price_menu_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_makanan"
            android:layout_marginBottom="12dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/food_pic_container_menu_detail"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/food_count_menu_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x1"
            android:layout_margin="12dp"
            android:textSize="24sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>