<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ui.RestoHomeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/wave_login_menu" />

    <androidx.cardview.widget.CardView
        android:id="@+id/resto_img_home_container"
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/resto_img_view_menu"
            android:layout_width="360dp"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant_placeholder"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/resto_name_view_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/resto_img_home_container"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:text="@string/nama_restoran"/>

    <TextView
        android:id="@+id/resto_type_menu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resto_name_view_menu"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/jenis_restoran"
        android:drawableStart="@drawable/ic_food"
        android:drawablePadding="12dp"/>

    <TextView
        android:id="@+id/resto_address_menu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resto_type_menu_view"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="12dp"
        android:layout_marginRight="24dp"/>

    <Button
        android:id="@+id/resto_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/resto_address_menu_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/contact"
        android:textSize="12sp"
        android:background="@drawable/button_red"
        android:textColor="@android:color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@+id/resto_contact_button"
        android:layout_marginTop="12dp"
        android:id="@+id/rv_menu_view"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>