<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ui.UserHomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/user_welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selamat Datang"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:fontFamily="@font/opensans_extrabold" />

        <Button
            android:id="@+id/user_logout_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_toEndOf="@+id/user_welcome_message"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/button_red"
            android:backgroundTint="@color/colorRed"
            android:drawableStart="@drawable/ic_logout"
            android:paddingStart="3dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/search_restaurant_input"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext_custom_box"
            android:hint="@string/cari_restoran"
            android:inputType="text"
            android:drawableStart="@drawable/custom_restaurant_icon"
            android:paddingStart="12dp"
            android:drawablePadding="12dp"
            android:paddingEnd="12dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/user_welcome_message"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/restaurant_search_button"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/cari"
            android:background="@drawable/button_red"
            android:textColor="@android:color/white"
            android:layout_below="@+id/search_restaurant_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/daftar_restoran_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_restoran"
            android:layout_below="@+id/restaurant_search_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans_extrabold"
            android:textSize="16sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menu_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/daftar_restoran_label"/>
    </RelativeLayout>

</FrameLayout>