<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <View
        android:id="@+id/viewTopLogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorRed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewWaveLogin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/viewTopLogin"
        android:background="@drawable/wave_login_menu" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/selfood_logo"
        app:layout_constraintBottom_toTopOf="@+id/loginRegisterOption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/loginInputEmail"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_box"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/custom_email_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.450" />

    <EditText
        android:id="@+id/loginInputPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_custom_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/custom_lock_icon"
        android:paddingStart="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.550" />

    <RelativeLayout
        android:id="@+id/loginBtnContainer"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginInputPassword"
        app:layout_constraintVertical_bias="0.675" >

        <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/login"
            android:background="@drawable/button_red"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/loginRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text_imperative"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtnContainer"
        app:layout_constraintVertical_bias="0.1" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/loginRegisterOption"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>